# Menzar

./: Pipfile  README.md  render.yaml
backend/: build.sh  language.py  pyproject.toml  render.yaml
backend/accounts/: urls.py
backend/backend/: settings.py  urls.py
backend/menzaDatabase/: admin.py  apps.py  cronjobs.py  models.py  permissions.py  serializers.py  setupDatabase.py  urls.py  views.py
backend/menzaDatabase/migrations/: 0001_initial.py  0002_rename_diners_diner_rename_dishes_dish_and_more.py  0002_rename_grade_review_rating.py  0003_alter_review_rating.py  0003_diner_description.py  0003_diner_display_name_alter_order_date.py  0004_alter_review_rating.py  0004_rename_date_order_timestamp.py  0005_alter_menu_date.py  0005_alter_review_rating.py  0006_alter_menu_date.py  0006_alter_review_rating.py  0007_alter_menu_date.py  0007_alter_review_rating.py  0008_alter_order_user.py  0008_alter_review_order.py
backend/menzaDatabase/scrapers/: baseScraper.py  dijaskiDomVicScraper.py  marjeticaBelinkaScraper.py  marjeticaTobacnaScraper.py  menzaBFScraper.py  menzaFEScraper.py  menzaIJSScraper.py  menzaPFScraper.py  restavracija123DSUScraper.py  restavracija123LetaliskaScraper.py  restavracija123Megacenter2Scraper.py  restavracija123PoslovnaScraper.py  restavracija123PristanScraper.py  roznakuhnaScraper.py  scrapers.py
backend/menzaDatabase/serializers/: serializers.py
backend/user/: models.py  urls.py  views.py
backend/user/migrations/: 0001_initial.py
backend/users/: admin.py  models.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
(+77 files in other folders)
